# FeatherweightGPS_Serial_Reader

./: CMakeLists.txt  FeatherweightGPS_Serial_Reader.kdev4  README.md  TODO.md  meson.build
.github/workflows/: c-cpp.yml  cmake.yml
.kdev4/: FeatherweightGPS_Serial_Reader.kdev4
backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
common/: App.cpp  App.h  Helpers.h  Image.h  Native.h
common/Fonts/: FontAwesome5.cpp  Fonts.h  IconsFontAwesome5.h
implot/: implot.h  implot_demo.cpp
src/: Makefile  data.csv  demo.cpp  functions.h  fwgui.cpp  gui_test.cpp  main.cpp  meson.build  plotfuncs.h  serial.h
